@@ -19,16 +19,16 @@ EBUILD mysql-5.6.24.ebuild 5232 SHA256 8c083b843aaba3a314cf941c8528bbdb7e379959d
 EBUILD mysql-5.6.25-r1.ebuild 5663 SHA256 006374ff5c756a3463348492377312d4787144708380b3f392c93ece26a13d6b SHA512 8b38cf6d117a366b8042bc2055fd139ae0ffd3bae389b77b117f661b4be345fd4811571026d7b53739ffc6af2b38dac7742e8458ea6726f6a2e66b7f946d7d15 WHIRLPOOL 71b8eec1f54aa67852ed1f407139e40179c96884251ceaddb77861ec53ce14ff4df702429e804c88e850c4a57938d832ad1dadce91b234f5dad9a9c490c7edf1
 EBUILD mysql-5.6.25.ebuild 5245 SHA256 a3432045b80c8e5cfdc0a509a18f88c23c652a737f2491d0ba946290cf853c46 SHA512 481b5ccbfced31f711f529b8ccce4bdf28c113958ed31a13a9262b6bc3f170f7333bf647e0971eacc3e15c26c742d90a2b26928df4539468f8ed36dd6407818c WHIRLPOOL 216930d9d58d8a6dbedb295c5ba37922d3c4367d09789bea5960bb9c4bccceb3fccb45007a60ad1b0bbf23758633f55c87484179f809c7d8800ac5f015bca8d1
 EBUILD mysql-5.6.26-r1.ebuild 5844 SHA256 cf8bc0567da1e170374064a19389afb7aae4684de0f553415cba9883ac18b41d SHA512 324f79a6fafb0e8b8ebcc6d827bbacdabca04b1f9d817374abbb4afd950f27d9f0871bf08c6ca31d2f1c450354c23186c114f2b6b9044b1af208e86f6bf9a84d WHIRLPOOL 044ae56f8610c4fef27798b12c1c85af8d709fe94d5204b2531efc96ece6106fba40d767f01df3c9762126a2b41becc01580faff8f0cbad42c5b6ba6c52e7352
-EBUILD mysql-5.6.26.ebuild 5445 SHA256 8d7bde902f9063f29edad7fdd2437d42533ec5860079a7fdfdc4659eb315e57b SHA512 d8d53f92f131f3aa4d676c4b7c1f39ef6841325f964b5df0a20af3230f7882e041529a7295f66b71b39422432cec374a94122b94ff5e60760557d96e4195fedf WHIRLPOOL b3ce598a5602b36d467a8a2373a75eaa079c29eb70fd4b9fdfde0924f707091a59696d9b59076052465b755193a15b3fabbacdd8f637ee1da2c24e7e2ce5b88b
-MISC ChangeLog 27236 SHA256 da8bc93572a230462a3d8ed3ca837836b36f603119b62a65d6ed0c3bcc0e3ad4 SHA512 8c80af30f1b3b1122913726d5189008f921a77f830becb0153c877b9c8ff805218f6faa1880b1c24b2ab6185e9f8e2324f055459ac7819043fb179b203e47f26 WHIRLPOOL 72d27b7d185fcc38290cbbff408038fcdfd2251dbe460242c45a14f2ab3d727fe0c6d19ec93fd025bda6c00c41bf775127b43da1f6a25809afacfd4ea6602362
+EBUILD mysql-5.6.26.ebuild 5445 SHA256 7f7bc3dffcc0748893c95e69ac607bd8bf914f5f7da7aa5d23a69c085ec02b55 SHA512 425d59ef47914d8c34a2c08859ba9e31e0b84ef53cc3f3da18a3593f948e6ab95645cb71ac815f4e3d138ec2a2064f352fcd776416ac537adcca04cec588332e WHIRLPOOL c2623d4cd19fd13768beec5b763daef46d675e986ab87cb6698b7c7dbfb587d608b88872356ecd2fccea1284d85043610de9faad54831d1e7de9114d443d88e5
+MISC ChangeLog 27343 SHA256 6b559024f51e9b0bdebbcef1b8e468749daba904ea12b1a911516042b611c7bf SHA512 f57ff22bfff95c5248a1746d8d705643b4a514c0bb068577aa2563a7ff6730d72345a9dfa375e9eaff1a1357b1e0aecfd6199b407c7c0aaa3212ca706129b955 WHIRLPOOL 88f3b2eb2f38ff4ac3764c87d77661d0fa697983a4140d73382b3f27472baa29c50fcb4ea215c260f4272641993302892c1482237083cd50dca571b1f7f45b3a
 MISC ChangeLog-2010 108404 SHA256 93dda53b8871d9040e6aebb59f095a8debd5c0a9437e78e5e949989e209ba5cd SHA512 5f54b7c2e25d27680a9313da2450851118e34a57202d9f36f59da52834ca3b587701d93868d71bf684ddc253d49f87837c8d7e2d442f2955dfde8a701150fbe5 WHIRLPOOL 55f758942e3012aa0ae7d529c2f8b6e0d8f4d7cbde09039f16cd05f0a58fc4e3e09ccd50e366effdcaab4641300eb0f494ddbe3a35a645ced8a9d747d80e9821
 MISC metadata.xml 1411 SHA256 0edc5387d481074924e19441c4a0dffe9308a616f557b7d9f4b9ae71eebf5961 SHA512 5efefdcca328de80c991910046e42174f79ab6038601e75691100267f6d442fc3262be56b3f80d14e9de2fbba8c3c73b39b474671c99e520392f9f7fda3cbedb WHIRLPOOL 7a9aeaf8f04ec7332a7632e1b68eec478e3e81f427e18e98a8b3ec1be6dc00ce37902a33a578bec332cca422c856c61b91063d03f2f1d0b110b142f2cacf7631
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2
+Version: GnuPG v2.1
 
-iJwEAQEIAAYFAlXCGyoACgkQG9wOWsQutdZx7AQAj4Z7C0f21KEM8RljTwCE0dFS
-eY5qWcRpM5elpkjoaLuJhWr0ukc3JDp1qMTou/gdh8OY5sdIhXP4TRzmTizDRKwf
-Yp52z8SP6QOsTbfUblhleEXO8+rLn6vhWiPR+07omKD68pl94oSkxcr1CzaOqICD
-27qq9u6CFRtToDb58F4=
-=onA3
+iKYEAREIAGYFAlXCgDxfFIAAAAAALgAoaXNzdWVyLWZwckBub3RhdGlvbnMub3Bl
+bnBncC5maWZ0aGhvcnNlbWFuLm5ldDFGNDg1MzU4NjMzRTAyNzA3RkY0ODA1QzAz
+RUUwM0ExQ0U1RDU0RTgACgkQA+4Doc5dVOhmrwCghJOJE/ZfaB8TighupEtl9SiK
+00IAnijhy490q6013l0ZXQ8zty9XuVSC
+=QDjw
 -----END PGP SIGNATURE-----
