@@ -10,4 +10,4 @@ RDEPEND=>=virtual/jre-1.5 dev-java/jgrapht:0 dev-java/commons-cli:1 dev-java/com
 SLOT=0
 SRC_URI=http://www.biojava.org/download/bj16/all/biojava-1.6-all.jar
 _eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	java-ant-2	1091461b8b02f54fabcfbf159164ff15	java-pkg-2	1889f7787714c5f7e3b5bb1c2be07c1f	java-utils-2	240e3f28c6b42b9f36d3c36b8b27fbb2	multilib	62927b3db3a589b0806255f3a002d5d3	toolchain-funcs	42408102d713fbad60ca21349865edb4	versionator	cd0bcdb170807e4a1984115e9d53a26f
-_md5_=6ee4c9b6a884ca9bda7dcac90804f344
+_md5_=5a2322e6c0a4529134352b2f892d9339
