@@ -3,18 +3,18 @@ Hash: SHA256
 
 DIST biojava-1.6-all.jar 24571007 SHA256 2d10334fe6022d1b64219505ba4d2a32027ab7218d775878506d3e7c00f6ce7e SHA512 300bd6e02fe052c810c52cb2cc4255628bee704af187ad746b97e57941778dc3a1996b3917db021d74db8c716f94c90c94c5a5e2d4bc212c06259381045f3034 WHIRLPOOL e5a52aaa6e9a9d6780d5f55b6d164db07388e9c595296d4e4a11dc241aa0745fa726279d19a0c97d1966b0a14c06af2b9b588873ad522aeeff881534f0871f10
 DIST biojava-1.7-all.jar 28062592 SHA256 5c5e7fc66bc79a07494fb7d935164ec2aab50dc2effb7644f89bfa4fc907bb3f SHA512 867862b45f014bcd1afd37691e91b948ede05e96f84c7051953d32dad49908781235aad80301e22a15fa8b4145e80c78cf3935d6e581a2e60b56c9308f8adaa8 WHIRLPOOL 5669293ce362e82562454c5902d523e69f64d90e117e75b5de844e0ef5866d250507b86f78245ac82f19932ad9aa196ad17d96a3f703187a3ab2daf00893af9b
-EBUILD biojava-1.6.ebuild 2004 SHA256 a6c787e1463ac3c9a6a15efd6d9d9f7827ca3688b6527feef910bb3dedf9b29d SHA512 2bbf7273f3149be82c604c485144ff6ebc9ce4fd222bf356ebefa38429a4f93e3b84947548967a23ce0591dca87da17062bb658b493b8062018a122cf5d0b3b0 WHIRLPOOL 1d05f7f4aa6762de077e79793dbd0e83c4bb80690d3741ccbed790d88ccb99ce3917876acda2783b356c9cbe8118ce80a4bc6d97dc4483857488fabe0dd3fbee
-EBUILD biojava-1.7.ebuild 2026 SHA256 9d994995677a07e18323e72e6c19fb09b4068bd0c1370e28022a55faa9c3e4a2 SHA512 5ab157b9ba634d85033911defc65b48d857386027dd64b95528b0932370042d7238a183b8c5113f769ed3e7b3b6950b80201840e1489429659756d6395f1ac94 WHIRLPOOL 8156bc40fb8284899d8e4a23ade8b45601e7fcbc3246c721ddfeee13ec349489a866c4623ae8b6e9cb2e7dd8b060110a3cb8c0a4d4e63d16e86e6adfa62732ae
-MISC ChangeLog 815 SHA256 3b4032bcb9b0d9f27bcd843196e5332d5301f404cea4334d392b11652beb8bee SHA512 b43456bff1ad36187d2666416956f069fbc89529a0603bd84532d49103849413278546fbdba8ce2a9a31a972116bdb88051122687fdcbccaf86a05620384d449 WHIRLPOOL 3ce15f2a8aef814454615644d53dc479d7f7663b1012a2bbc10b68b7322b6c8b35c1375d6e88ca9381eeea67c918c6b89b8ab4a88ab89c9db70c4f77387d83bf
+EBUILD biojava-1.6.ebuild 2004 SHA256 b1035c0194b217b2d2f8e338289798d02c1ca77da67e7195111f9168715b5d2a SHA512 371e152c84545a30c56b8e60387e4e9d5fa98836e803ae860c323fff4bdafce142742cca5664141c97816f8373801ae10836a202c347828da1d17545a553f3b9 WHIRLPOOL 3f9ada19e17e8da0804b838f55d386a183ec4cc3778d1fe948af29bb7cc03d17b2d1618dc84179edbe010e5b09117234dcdcc216adb49988d337220f7e1e9b68
+EBUILD biojava-1.7.ebuild 2026 SHA256 b3492e107e2d728d5a38ffbf465c930988d08cace00eb97ee52f5fa6161ce1d0 SHA512 085f0b6f94afc660e8f7d48967227142dc13197bb4d56f454be541e87234c990225051be398d8bd3150de92560f9b5d3e7b613ee855567459e8e1bb6f685f637 WHIRLPOOL ab75cc4744bd616bb7c1b6867cbf1c8bb790c43135603d656ca54c51c29f0dfb561366ba9cf24b48e141a2cd266fc3b184a78ab7c479c0afe5dcd40ecee1f2fe
+MISC ChangeLog 963 SHA256 f81d930aee2ce1b4df90dd874b20d34063297b53bf45dd38f792fd7efa7725f6 SHA512 f2b2685dba36ba0bca3c95bdce4859330558eb61c92d39af3bdc6ea3fbb5e16a7d37d416bf33ed9bef54fc6f29c8f2dbb414f4fb4054b9122f37fdf778d8880e WHIRLPOOL 510693b5e3392fef4159fa80bd1f745a62f62e8fb33d8e2a621b6c77e6a2a0f46ea1530001cf910702773ef557dceed5c9f580b3b2fbc994a7137db4ab25d449
 MISC metadata.xml 184 SHA256 b1eba987253b6431655eb740d92c9317127741c254ccf58811333144072fed15 SHA512 810509270c115326274543d26ae73517c79690223fdc33cecd2ac55a5ad2a0bc5bf773f52f865bfd1e57caaf6e932f4622d6403b3248a4bb50a9d782c43cec3b WHIRLPOOL a2e20616a149551b2873be9eb84ce99ebad34323db12c2ced66731775e69d9ef7fbf952256019d6e573f420bb87b37dd8e147e29a479c0480fc349345caaf467
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQEcBAEBCAAGBQJVwiWyAAoJEJGRpfGTSRu4q/8H/0zMH1sjgR6julyuVtUspN9U
-rm0NMHWTdArnVNW6Bg1UJFlTNDEEji2u4UXOjhbD5TgPSQ6sO/JJP8nZFn26upfL
-RrJdCUJqDzBkddqDQ6njONxoHegkrSu6VMOUc/DJHdjxx5En0jMbYh1NbsnkuVJ0
-Cxq5y0xq7lnhfseL9IJ4Iqd7c+jPpJw6BgqY/iG7cGDvxBNYKs85ZPHwNQsDICBt
-GNWrF3UBBG9Tct0UVjuH38X/XZ++2Yc9W4XfikZQEp6JZvk/cX8jjRkTutHUHw19
-nADno5yMzHhTXZE64QblGUvEssddH0oz9EAILk+tJeWzf9YRW2z5pioPXAskMDE=
-=jxO9
+iQEcBAEBCAAGBQJVwof1AAoJEJGRpfGTSRu4zScIAJWJNZyigXD3I5RCh9SgmAX4
+WYa6RtfdglZbswR0XVl5Fzf/WiRtSwAN6ZcFP8E43PSt4OAqd+YkE79AvTt83llR
+c0wgJTqfosaf3sqECrZTJJA2SvMX94giXHF0z8A9vgtopg5PVxOVSfy1gBK619jR
+yZqtDRcxrNwMcpbPSWu3ur+36P0Kb3NFY5qslwjsDfYdeJddlBtBxY/9NH3WweVe
+BdnypdKaJqoTP8AR21JHVZqXNeIFJZzmS9ujCLSv9sw3i3GU/rpWbbICsus15HeC
+XXW1vP955qKhsX27SvfypG3DUH1zudz4e4yo56WwMxAnlSLGGzBMs45M4Cetwfo=
+=nHxY
 -----END PGP SIGNATURE-----
