@@ -1,6 +1,6 @@
-# Copyright 1999-2010 Gentoo Foundation
+# Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sci-biology/biojava/biojava-1.7.ebuild,v 1.1 2015/08/05 14:02:36 monsieurp Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-biology/biojava/biojava-1.7.ebuild,v 1.2 2015/08/05 21:01:52 monsieurp Exp $
 
 # TODO:
 # -Fix javadoc generation OutOfMemoryError
